# nook

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
docs/envoy/: auth--me.md  auth--refresh.md  gql--CreateInviteReservation.md  gql--EmployeeRegistrationPartialDay.md  gql--SignInInvite.md  rest--desks.md  rest-location.md
src/: config.rs  logging.rs  main.rs
src/cache/: desks.rs  mod.rs
src/cli/: booking.rs  mod.rs  profile.rs
src/commands/: mod.rs
src/commands/booking/: check_in.rs  create.rs  mod.rs  show.rs
src/commands/profile/: create.rs  info.rs  mod.rs  refresh.rs
src/envoy/: auth.rs  client.rs  mod.rs  types.rs  util.rs
src/envoy/queries/: CreateInviteReservation.gql  EmployeeRegistrationPartialDay.gql  SignInInvite.gql
src/profile/: decrypt.rs  loader.rs  mod.rs  token_store.rs
src/util/: date.rs  location.rs  mod.rs  spinner.rs
