[package]
name = "nook"
description = "A tool for managing Envoy bookings and check-ins"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
thiserror = "1"
serde_yaml = "0.9"
aes-gcm = "0.10"
base64 = "0.22"
rpassword = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dirs = "5"
indicatif = "0.17"
rand = "0.8"
